--- a/src/css/pages/home.scss
+++ b/src/css/pages/home.scss
@@ -240,15 +240,7 @@
 
     width: 100%;
 
-    margin-top: - rem($tuf-section-title / 2);
-
-    @media only screen and (min-width: rem(500)) {
-      margin-top: - rem($tuf-section-title-t / 2);
-    }
-
-    @media only screen and (min-width: rem(1024)) {
-      margin-top: - rem($tuf-section-title-d / 2);
-    }
+    margin-top: calc(((60 / 375) * -100vw) / 2);
   }
 
   &__list,
@@ -366,10 +358,6 @@
 }
 
 .ask-ava {
-  &__title {
-    text-align: right;
-  }
-
   &__content {
     display: flex;
 
@@ -660,21 +648,6 @@
 }
 
 .case-studies {
-  &__title {
-    margin-left: auto;
-
-    max-width: rem(320);
-    text-align: right;
-
-    @media only screen and (min-width: rem(500)) {
-      max-width: rem(500);
-    }
-
-    @media only screen and (min-width: rem(1024)) {
-      max-width: rem(640);
-    }
-  }
-
   &__cta {
     width: fit-content;
 
@@ -711,21 +684,6 @@
 }
 
 .what-do-you-seek {
-  &__title {
-    margin-left: auto;
-
-    max-width: rem(340);
-    text-align: right;
-
-    @media only screen and (min-width: rem(500)) {
-      max-width: rem(500);
-    }
-
-    @media only screen and (min-width: rem(1024)) {
-      max-width: rem(900);
-    }
-  }
-
   &__content-wrapper::before {
     display: block;
     content: '';
